--- a/.github/workflows/deploy-waypoint.yml
+++ b/.github/workflows/deploy-waypoint.yml
@@ -47,12 +47,12 @@ jobs:
         if: ${{ github.ref != 'refs/heads/develop' }}
         uses: serverless/github-action@v3.1
         with:
-          args: -c "serverless deploy --stage dev --verbose"
+          args: -c "serverless plugin install --name serverless-python-requirements && serverless plugin install --name serverless-wsgi && serverless deploy --stage dev --verbose"
           entrypoint: /bin/sh
 
       - name: Serverless Prod Deploy
         if: ${{ github.ref != 'refs/heads/main' }}
         uses: serverless/github-action@v3.1
         with:
-          args: -c "serverless deploy --stage prod --verbose"
+          args: -c "serverless plugin install --name serverless-python-requirements && serverless plugin install --name serverless-wsgi && serverless deploy --stage prod --verbose"
           entrypoint: /bin/sh
