--- a/.github/workflows/deploy-waypoint.yml
+++ b/.github/workflows/deploy-waypoint.yml
@@ -44,14 +44,14 @@ jobs:
           aws-region: us-east-2
 
       - name: Serverless Dev Deploy
-        if: ${{ github.ref != 'refs/heads/develop' }}
+        if: ${{ github.ref == 'refs/heads/develop' }}
         uses: serverless/github-action@v3.1
         with:
           args: -c "serverless plugin install --name serverless-python-requirements && serverless plugin install --name serverless-wsgi && serverless deploy --stage dev --verbose"
           entrypoint: /bin/sh
 
       - name: Serverless Prod Deploy
-        if: ${{ github.ref != 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: serverless/github-action@v3.1
         with:
           args: -c "serverless plugin install --name serverless-python-requirements && serverless plugin install --name serverless-wsgi && serverless deploy --stage prod --verbose"
