--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,7 @@ custom:
     app: app.app
     packRequirements: false
   pythonRequirements:
-    dockerizePip: non-linux
+    dockerizePip: true
     dockerImage: public.ecr.aws/sam/build-python3.9:latest
 
 provider:
